--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
     "openai": "^6.3.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
     "@openai/agents": "^0.1.0",
     "@openai/agents-openai": "^0.1.0",
-    "zod": "^3.0.0",
+    "zod": "^3.0.0"
   }
 }
