--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "node-fetch": "^3.3.2",
     "@openai/agents": "^0.1.0",
     "@openai/agents-openai": "^0.1.0",
-    "zod": "^3.0.0"
+    "zod": "^3.0.0",
     "@modelcontextprotocol/sdk": "^0.4.1"
   }
 }
